# atcoder-python

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  _config.yml  ci.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-package.yml
docker/: .env  Dockerfile  docker-compose.yml
docs/: _rtd_conf.py  _sphinx_conf.py  atcoder.core.rst  atcoder.rst  atcoder.tests.rst  conf.py  index.rst
docs/_build/: .buildinfo  atcoder.core.crawl.html  atcoder.core.scrape.html  atcoder.core.tests.html  atcoder.html  atcoder.tests.html  index.html  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: atcoder.core.crawl.doctree  atcoder.core.crawl.tests.doctree  atcoder.core.doctree  atcoder.core.scrape.doctree  atcoder.core.tests.doctree  atcoder.doctree  atcoder.tests.doctree  environment.pickle  index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/atcoder/: contest.html  login.html  submit.html
docs/_build/_modules/atcoder/core/: task.html  utils.html
docs/_build/_modules/atcoder/core/crawl/: contests.html  score.html  submission_results.html  (+4 more)
docs/_build/_modules/atcoder/tests/: submission_result_test.html
docs/_build/_sources/: atcoder.rst.txt
docs/_build/doctrees/: atcoder.core.crawl.doctree  atcoder.core.crawl.tests.doctree  atcoder.core.doctree  atcoder.core.scrape.doctree  atcoder.core.tests.doctree  atcoder.doctree  atcoder.tests.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  atcoder.core.crawl.tests.html  atcoder.core.html  atcoder.html  atcoder.tests.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/atcoder/: auth.html  contest.html  crawl.html  language.html  login.html  submission.html  submission_result.html  submit.html  task.html  user_agent.html
docs/_build/html/_sources/: atcoder.core.crawl.rst.txt  atcoder.core.crawl.tests.rst.txt  atcoder.core.scrape.rst.txt  atcoder.core.tests.rst.txt  atcoder.tests.rst.txt  index.rst.txt
docs/_build/html/_static/: bizstyle.js  documentation_options.js
docs/_build/html/_static/styles/: furo-extensions.css  furo-extensions.css.map  furo.css  furo.css.map
docs/api/: atcoder.auth.rst  atcoder.contest.rst  atcoder.crawl.rst  atcoder.editorial.rst  atcoder.home.rst  atcoder.language.rst  atcoder.login.rst  atcoder.rst  atcoder.score.rst  atcoder.standings.rst  atcoder.submission.rst  atcoder.utils.rst  conf.py  index.rst
docs/api/_build/doctrees/: atcoder.auth.doctree  atcoder.constant.doctree  atcoder.contest.doctree  atcoder.crawl.doctree  atcoder.doctree  atcoder.editorial.doctree  atcoder.home.doctree  atcoder.language.doctree  atcoder.login.doctree  atcoder.network.doctree  atcoder.score.doctree  atcoder.scrape.doctree  atcoder.standings.doctree  atcoder.submission.doctree  atcoder.submit.doctree  atcoder.task.doctree  atcoder.top.doctree  atcoder.user.doctree  atcoder.user_agent.doctree  atcoder.utils.doctree  environment.pickle  index.doctree
docs/api/_build/html/: .buildinfo  atcoder.auth.html  atcoder.constant.html  atcoder.contest.html  atcoder.crawl.html  atcoder.editorial.html  atcoder.home.html  atcoder.html  atcoder.language.html  atcoder.login.html  atcoder.network.html  atcoder.score.html  atcoder.scrape.html  atcoder.standings.html  atcoder.submission.html  atcoder.submit.html  atcoder.task.html  atcoder.top.html  atcoder.user.html  atcoder.user_agent.html  atcoder.utils.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/_build/html/_modules/: index.html
docs/api/_build/html/_sources/: atcoder.constant.rst.txt  atcoder.network.rst.txt  atcoder.scrape.rst.txt  atcoder.submit.rst.txt  atcoder.task.rst.txt  atcoder.top.rst.txt  atcoder.user.rst.txt  atcoder.user_agent.rst.txt
docs/api/_build/html/_static/: documentation_options.js  pygments.css
scripts/: _docs_util.py  build_sphinx_docs.py  build_sphinx_docs.sh  chmod_exec.sh  ci.sh  clear_cache.sh  fetch_language_list_as_json.py  format.sh  generate_sphinx_conf.py  generate_sphinx_docs_headers.py  generate_sphinx_docs_headers.sh  lint.sh  load_languages.py  precommit.sh  publish.sh  publish_test.sh  setup.sh  testing.sh  update_docs.sh
src/: language.yaml  languages.yaml
src/atcoder/: __init__.py  auth.py  constant.py  contest.py  crawl.py  editorial.py  language.py  login.py  network.py  score.py  scrape.py  submission.py  submission_result.py  submission_status.py  submit.py  task.py  user.py  user_agent.py  utils.py  version.py
src/atcoder/core/: _test_utils.py  auth.py  contest.py  language.py  network.py  submission.py  submission_result.py  task.py  utils.py
src/atcoder/core/crawl/: constant.py  contest.py  contests.py  contests_archive.py  editorial.py  login.py  score.py  submission.py  submission_result.py  submission_results.py  submissions.py  submit.py  task.py  tasks.py  user.py  utils.py
src/atcoder/core/crawl/tests/: __init__.py  contests_archive_test.py  contests_test.py  login_test.py  submissions_test.py  submit_test.py  task_test.py  tasks_test.py
src/atcoder/core/scrape/: contest.py  contests.py  contests_archive.py  form.py  login.py  score.py  submission.py  submission_result.py  submission_results.py  submissions.py  submit.py  tasks.py  utils.py
src/atcoder/core/scrape/tests/: contest_test.py  contests_archive_test.py  contests_test.py  submission_test.py  submissions_test.py  submit_test.py  tasks_test.py
src/atcoder/core/tests/: network_test.py
src/atcoder/crawl/: constant.py  contest.py  editorial.py  submission.py  submissions.py  task.py  tasks.py
src/atcoder/scrape/: contest.py  submission.py  submissions.py
src/atcoder/tests/: contest_test.py  language_test.py  login_test.py  network_test.py  submission_result_test.py  submission_test.py  submit_test.py  user_agent.py  user_agent_test.py
src/v2/atcoder/: auth.py  constant.py  contest.py  crawl.py  login.py  scrape.py  user.py
tests/: crawl.py  scrape.py  test.py
(+51 files in other folders)
