[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
classifiers = []
description = "AtCoder API."
documentation = "https://atcoder-api-python.readthedocs.io"
exclude = [
  "./**/tests/",
  "./**/*_test.py",
  "./**/test_*.py",
  "./**/_test_*.py",
]
homepage = "https://atcoder-api-python.readthedocs.io"
include = [
  "./**/src/languages.yaml",
]
keywords = ["atcoder", "api"]
license = "MIT"
maintainers = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
name = "atcoder-api"
packages = [
  {include = "atcoder", from = "src"},
]
readme = "README.md"
repository = "https://github.com/competitive-programming-helper/atcoder-api"
version = "0.3.4"

[tool.poetry.dependencies]
PyYAML = "^"
aiodns = "^"
aiohttp = "^"
beautifulsoup4 = "^"
boto3 = "^"
cchardet = "^"
lxml = "^"
pandas = "^"
python = ">=3.8,<3.11"
requests = "^"
selenium = "^"
tqdm = "^"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
autopep8 = "^"
bandit = "^"
black = "^"
blacken-docs = "^"
flake8 = "^"
furo = "^"
isort = "^"
mypy = "^"
myst-parser = "^"
pdoc3 = "^"
pre-commit = "^"
pydocstyle = "^"
pylint = "^"
pytest = "^"
pytest-asyncio = "^"
sphinx = "^"
sphinxcontrib-mermaid = "^"
types-PyYAML = "^"
types-requests = "^"
types-setuptools = "^"

[tool.black]
# compatible configurations -> https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
line-length = 79
target-version = ["py38", "py39", "py310"]

[tool.flake8]
count = 'true' # have not adaped to boolean value yet.
exclude = "" 
ignore = 'E203' 
max_line_length = 79 
show-source = 'true' 
statistics = 'true' 

[tool.isort]
# all config files -> https://pycqa.github.io/isort/docs/configuration/config_files.html
# full options -> https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"
# see all profiles -> https://pycqa.github.io/isort/docs/configuration/profiles.html
line_length = 79

[tool.mypy]
allow_untyped_globals = false
color_output = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
no_strict_optional = false
pretty = true
python_version = "3.10"
show_absolute_path = false
show_column_numbers = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = true

[tool.pytest.ini_options]
cache_dir = "/tmp/.pytest_cache"
